# pyqtschema

./: pyproject.toml  setup.cfg
src/pyqtschema/: builder.py
src/pyqtschema/widgets/: __init__.py  any_of.py  array.py  base.py  const.py  groups.py  numeric.py
