[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqtschema"
dynamic = ["version"]
description = "Convert json-schema to QWidgets"
authors = [
    {name = "Amsico", email = "amsico@eclipso.eu"},
]
readme = "README.md"
# requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema",
    "QtPy"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/your-repo"
"Bug Tracker" = "https://github.com/yourusername/your-repo/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyqtschema*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "pyqtschema.__version__.version"}